--- a/style.css
+++ b/style.css
@@ -773,7 +773,7 @@ body {
     top: auto;
     width: 3px;
     height: 3px;
-    background: transparent;
+    background: red;
 
     box-shadow: 387px 1878px #fff, 760px 1564px #fff, 1487px 999px #fff,
     948px 1828px #fff, 1977px 1001px #fff, 1284px 1963px #fff, 656px 284px #fff,
